fixes overflow issue on sidebar

--- a/frontend/src/components/controls/SidebarUI/style.scss
+++ b/frontend/src/components/controls/SidebarUI/style.scss
@@ -21,7 +21,7 @@
         bottom: 0;
         //padding-right: 1.5rem;
         width: 100%;
-        overflow: hidden;
+        overflow: scroll;
     }
 
     .ReactVirtualized__Grid__innerScrollContainer:last-of-type {
